...
      return `Volume layer ${t.index + 1}`;
    case 'layerMute':
      return `Layer ${t.index + 1} on / off`;
    case 'nextPatch':
      return 'Patch suivant';
    case 'prevPatch':
      return 'Patch précédent';
    case 'padToggle':
      return 'Pad on / off';
    case 'tapTempo':
      return 'Tap Tempo';
    case 'panic':
      return 'Panic';
...
